--- a/WebSnip.csproj
+++ b/WebSnip.csproj
@@ -47,7 +47,9 @@
     <Compile Include="IRequestWebSnippets.cs" />
     <Compile Include="NoBaseUrlProvidedButRelativeUrlRequestedException.cs" />
     <Compile Include="Render\BaseRenderer.cs" />
+    <Compile Include="Render\HtmlRenderer.cs" />
     <Compile Include="Render\ImageRenderer.cs" />
+    <Compile Include="Render\TagRenderer.cs" />
     <Compile Include="Render\TextRenderer.cs" />
     <Compile Include="Render\IRenderToHtml.cs" />
     <Compile Include="Request\WebSnippetRequest.cs" />
