Added full samples

--- a/SampleProject/SampleProject.csproj
+++ b/SampleProject/SampleProject.csproj
@@ -218,6 +218,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ShowSnippet.cshtml" />
+    <Content Include="Views\Home\ShowCustomSnippet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
