--- a/WebSnip.csproj
+++ b/WebSnip.csproj
@@ -46,6 +46,7 @@
     <Compile Include="HtmlUtils\TagBuilder.cs" />
     <Compile Include="IRequestWebSnippets.cs" />
     <Compile Include="NoBaseUrlProvidedButRelativeUrlRequestedException.cs" />
+    <Compile Include="Render\AttributeRenderer.cs" />
     <Compile Include="Render\BaseRenderer.cs" />
     <Compile Include="Render\HtmlRenderer.cs" />
     <Compile Include="Render\ImageRenderer.cs" />
@@ -58,7 +59,6 @@
     <Compile Include="Templating\DefaultTemplate.cs" />
     <Compile Include="Templating\EmptyTemplate.cs" />
     <Compile Include="Templating\ICanDoTemplatingForWebSnippets.cs" />
-    <Compile Include="Templating\NamedTemplate.cs" />
     <Compile Include="Transform\DefaultTagSetFactory.cs" />
     <Compile Include="Transform\DefaultTransformWebContent.cs" />
     <Compile Include="Transform\ITransformWebContentForUrl.cs" />
