Refactored tag set factory

--- a/WebSnip.csproj
+++ b/WebSnip.csproj
@@ -48,12 +48,12 @@
     <Compile Include="HtmlUtils\TagBuilder.cs" />
     <Compile Include="IRequestWebSnippets.cs" />
     <Compile Include="NoBaseUrlProvidedButRelativeUrlRequestedException.cs" />
-    <Compile Include="Render\AttributeRenderer.cs" />
+    <Compile Include="Render\Attribute.cs" />
     <Compile Include="Render\BaseRenderer.cs" />
     <Compile Include="Render\HtmlRenderer.cs" />
-    <Compile Include="Render\ImageRenderer.cs" />
+    <Compile Include="Render\Image.cs" />
     <Compile Include="Render\TagRenderer.cs" />
-    <Compile Include="Render\TextRenderer.cs" />
+    <Compile Include="Render\Text.cs" />
     <Compile Include="Render\IRenderToHtml.cs" />
     <Compile Include="Request\WebSnippetRequest.cs" />
     <Compile Include="SnipMaker.cs" />
@@ -61,10 +61,14 @@
     <Compile Include="Templating\DefaultTemplate.cs" />
     <Compile Include="Templating\EmptyTemplate.cs" />
     <Compile Include="Templating\ICanDoTemplatingForWebSnippets.cs" />
+    <Compile Include="Transform\Amazon.cs" />
     <Compile Include="Transform\DefaultTagSetFactory.cs" />
     <Compile Include="Transform\DefaultTransformWebContent.cs" />
+    <Compile Include="Transform\DefaultWebsite.cs" />
+    <Compile Include="Transform\IAmAWebsite.cs" />
     <Compile Include="Transform\ITransformWebContentForUrl.cs" />
     <Compile Include="Transform\ITransformWebContentToWebSnippets.cs" />
+    <Compile Include="Transform\TagSetFactoryFor.cs" />
     <Compile Include="Transform\TransformWebContentToWebSnippets.cs" />
     <Compile Include="Utils\SyntaticSugar\Switch\Switch.cs" />
     <Compile Include="Utils\SyntaticSugar\Switch\SwitchExtensions.cs" />
