Created new dedicated class for RenderSets

--- a/WebSnip.csproj
+++ b/WebSnip.csproj
@@ -61,15 +61,16 @@
     <Compile Include="Templating\DefaultTemplate.cs" />
     <Compile Include="Templating\EmptyTemplate.cs" />
     <Compile Include="Templating\ICanDoTemplatingForWebSnippets.cs" />
-    <Compile Include="Transform\Amazon.cs" />
-    <Compile Include="Transform\DefaultTagSetFactory.cs" />
+    <Compile Include="Transform\Factory.cs" />
     <Compile Include="Transform\DefaultTransformWebContent.cs" />
-    <Compile Include="Transform\DefaultWebsite.cs" />
-    <Compile Include="Transform\IAmAWebsite.cs" />
     <Compile Include="Transform\ITransformWebContentForUrl.cs" />
     <Compile Include="Transform\ITransformWebContentToWebSnippets.cs" />
+    <Compile Include="Transform\RenderSet.cs" />
     <Compile Include="Transform\TagSetFactoryFor.cs" />
     <Compile Include="Transform\TransformWebContentToWebSnippets.cs" />
+    <Compile Include="Transform\Websites\Amazon.cs" />
+    <Compile Include="Transform\Websites\DefaultWebsite.cs" />
+    <Compile Include="Transform\Websites\IAmAWebsite.cs" />
     <Compile Include="Utils\SyntaticSugar\Switch\Switch.cs" />
     <Compile Include="Utils\SyntaticSugar\Switch\SwitchExtensions.cs" />
     <Compile Include="WebSnippet.cs" />
